--- a/explorer/Dockerfile
+++ b/explorer/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:6.11-alpine
 
-WORKDIR "/opt"
+WORKDIR /opt
 
 RUN apk add --update git make g++ && \
     git clone https://bitbucket.org/designisdead/blockchain-explorer.git
 
-WORKDIR "/opt/blockchain-explorer"
+WORKDIR /opt/blockchain-explorer
 RUN git checkout c6e12f1
 RUN npm install
 
